src/kcmkwin/kwincompositing/main.cpp
@@ -69,6 +69,10 @@ KWinCompositingKCM::KWinCompositingKCM(QWidget *parent, const QVariantList &args
     , m_settings(new KWinCompositingSetting(this))
 {
     m_form.setupUi(this);
+
+    // AnimationDurationFactor should be written to the same place as the lnf to avoid conflicts
+    m_settings->findItem("AnimationDurationFactor")->setWriteFlags(KConfigBase::Global | KConfigBase::Notify);
+
     addConfig(m_settings, this);
 
     m_form.glCrashedWarning->setIcon(QIcon::fromTheme(QStringLiteral("dialog-warning")));
@@ -210,6 +214,9 @@ void KWinCompositingKCM::save()
     m_settings->save();
 
     KCModule::save();
+
+    // This clears up old entries that are now migrated to kdeglobals
+    KConfig("kwinrc", KConfig::NoGlobals).group("KDE").revertToDefault("AnimationDurationFactor");
 
     // Send signal to all kwin instances
     QDBusMessage message = QDBusMessage::createSignal(QStringLiteral("/Compositor"),
